--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h2>BLOG</h2>
-        <a href="index.html">Back to Home</a>
+        <a href="index.html">Back to Homeg</a>
     </body>
 </html>
